college supplements are due in 15 days?
WRONG advent of code Day 8: Resonant Collinearity